--- a/index.html
+++ b/index.html
@@ -280,7 +280,33 @@
 									}<br>
 									</code>
 								`
-          }
+					},
+					{
+						title: "css3实现菜单栏选中时的过渡效果",
+						time: "2016-10-14",
+						content: `<a href="./07-menus/index-2.html">index-2.html</a><br>
+											点击后的效果过程图：
+											<img style="display:block;width:100%;height:100%;" src="./graphs/0702.png"/><br>
+											<img style="display:block;width:100%;height:100%;" src="./graphs/0703.png"/><br>
+											<img style="display:block;width:100%;height:100%;" src="./graphs/0704.png"/><br>
+											<img style="display:block;width:100%;height:100%;" src="./graphs/0705.png"/><br>`
+					},
+					{
+						title: "选项卡效果的菜单栏",
+						time: "2016-11-07",
+						content: `<a href="./17-tabMenu/tabOne.html">tabOne.html</a><br>
+											<a href="./17-tabMenu/tab1.html">tab1.html</a><br>
+											区别：<br>
+											tabOne.html：多个html文件之间的跳转。（多个html文件）<br>
+											tab1.html：  显示隐藏某个元素。（一个html文件）<br>
+											样式效果是一样的：<br>
+											<img style="display:block;width:100%;height:100%;" src="./graphs/1702.png"/><br>`
+					},
+					{
+						title: "css3实现图片划过一束光闪过效果",
+						time: "2016-09-13",
+						content: `<a href="./cssEffect/flashLightPic.html">flashLightPic.html</a><br>`
+					}
         ]
         // 排序
         blogs = blogs.sort((a, b) => {
