格式化代码并更新内容

--- a/04-WeeklyCalendar/index.html
+++ b/04-WeeklyCalendar/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>生成周历</title>
+    <title>js生成当前日期起，一周内的日期+周几/今日（生成周历）</title>
     <style>
       table {
         border-collapse: collapse;
