--- a/05-SearchList/index.html
+++ b/05-SearchList/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>搜索列表</title>
+    <title>js实现输入框搜索提示功能</title>
     <style type="text/css">
       #kw {
         width: 286px;
