--- a/07-menus/index.html
+++ b/07-menus/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>
+      JavaScript实现多个菜单的显示隐藏（JavaScript实现二级/三级菜单的显示隐藏）
+    </title>
     <style>
       * {
         margin: 0;
