--- a/10-Loading/loading2.html
+++ b/10-Loading/loading2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>loading</title>
   <style>
     body{background: #000;}
     .sk-fading-circle {
