--- a/11-ViewPicture/View-Picture.html
+++ b/11-ViewPicture/View-Picture.html
@@ -1,36 +1,51 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>查看大图</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
-</head>
-<body>
-  <div class="swiper-container-album">
-    <div class="swiper-wrapper">
-      <a href="javascript:;" class="swiper-slide">
-        <img src="http://b.zol-img.com.cn/desk/bizhi/image/4/1920x1200/1386812613257.jpeg" class="width-100">
-      </a>
-      <a href="javascript:;" class="swiper-slide">
-        <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1579009123815&di=dffd279858f522d9bbe6ddf4eb03dfb8&imgtype=0&src=http%3A%2F%2Fww2.sinaimg.cn%2Flarge%2F6ffa5773gw1e9xggeq31tj21kw11xgqq.jpg" class="width-100">
-      </a>
-      <a href="javascript:;" class="swiper-slide">
-        <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1579009184654&di=1801fa0bc3a14236d96907945476418a&imgtype=0&src=http%3A%2F%2Fimg1.qunarzz.com%2Ftravel%2Fd1%2F1410%2F17%2F976a5ae174d3cd67ffffffffc8d65eac.jpeg_r_640x453x70_63758ccb.jpeg" class="width-100">
-      </a>
-      <a href="javascript:;" class="swiper-slide">
-        <img src="http://attach.bbs.miui.com/forum/201708/24/020352xrrv5ryzbizoopqj.jpg" class="width-100">
-      </a>
-      <a href="javascript:;" class="swiper-slide">
-        <img src="http://pic.baike.soso.com/p/20131221/20131221152446-229545202.jpg" class="width-100">
-      </a>
+  <head>
+    <meta charset="utf-8" />
+    <title>点击图片查看大图效果</title>
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+  </head>
+  <body>
+    <div class="swiper-container-album">
+      <div class="swiper-wrapper">
+        <a href="javascript:;" class="swiper-slide">
+          <img
+            src="http://b.zol-img.com.cn/desk/bizhi/image/4/1920x1200/1386812613257.jpeg"
+            class="width-100"
+          />
+        </a>
+        <a href="javascript:;" class="swiper-slide">
+          <img
+            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1579009123815&di=dffd279858f522d9bbe6ddf4eb03dfb8&imgtype=0&src=http%3A%2F%2Fww2.sinaimg.cn%2Flarge%2F6ffa5773gw1e9xggeq31tj21kw11xgqq.jpg"
+            class="width-100"
+          />
+        </a>
+        <a href="javascript:;" class="swiper-slide">
+          <img
+            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1579009184654&di=1801fa0bc3a14236d96907945476418a&imgtype=0&src=http%3A%2F%2Fimg1.qunarzz.com%2Ftravel%2Fd1%2F1410%2F17%2F976a5ae174d3cd67ffffffffc8d65eac.jpeg_r_640x453x70_63758ccb.jpeg"
+            class="width-100"
+          />
+        </a>
+        <a href="javascript:;" class="swiper-slide">
+          <img
+            src="http://attach.bbs.miui.com/forum/201708/24/020352xrrv5ryzbizoopqj.jpg"
+            class="width-100"
+          />
+        </a>
+        <a href="javascript:;" class="swiper-slide">
+          <img
+            src="http://pic.baike.soso.com/p/20131221/20131221152446-229545202.jpg"
+            class="width-100"
+          />
+        </a>
+      </div>
     </div>
-  </div>
-  <div class="see-big-photo-wrap">
-    <button class="see-big-photo-close">X</button>
-    <div class="see-big-photo">
-      <img src="" id="seephoto"/>
+    <div class="see-big-photo-wrap">
+      <button class="see-big-photo-close">X</button>
+      <div class="see-big-photo">
+        <img src="" id="seephoto" />
+      </div>
     </div>
-  </div>
-  <script src="./view-picture.js"></script>
-</body>
+    <script src="./view-picture.js"></script>
+  </body>
 </html>
