--- a/17-tabMenu/tabThree.html
+++ b/17-tabMenu/tabThree.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="./index3.css">
-</head>
-<body>
-  <div id="wrap">
-    <div class="title">
+  <head>
+    <meta charset="UTF-8">
+    <title>选项卡效果的菜单栏</title>
+    <link rel="stylesheet" href="./index3.css">
+  </head>
+  <body>
+    <div id="wrap">
+      <div class="title">
         <ul>
-            <li><a href="tabOne.html">产品介绍</a><i></i></li>
-            <li><a href="tabTwo.html">产品功能</a><i></i></li>
-            <li class="active"><a href="tabThree.html">产品价格</a><i></i></li class="active">
-            <li><a href="tabFour.html">更多服务</a><i></i></li>
+          <li><a href="tabOne.html">产品介绍</a><i></i></li>
+          <li><a href="tabTwo.html">产品功能</a><i></i></li>
+          <li class="active"><a href="tabThree.html">产品价格</a><i></i></li class="active">
+          <li><a href="tabFour.html">更多服务</a><i></i></li>
         </ul>
-    </div>
-    <div class="con">
+      </div>
+      <div class="con">
         内容内容内容内容内容内容3
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
