--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           {
             title: 'canvas写的广州地铁图',
             time: '2017-03-06',
-						content: `<div>根据的是百度提供的坐标，canvas的坐标是大的坐标在后面，所以跟实际生活方向相反。所以canvas里的北方在下方，实际生活中北方在上方。 因为根据的是真实坐标，所以跟广州地铁提供的地图不一样。 左侧地图一种写法，右侧地图另一种写法。左侧可以下拉菜单选择线路查看路线，还可以查询站名属于哪个路线；右侧是全地图。</div>
+            content: `<div>根据的是百度提供的坐标，canvas的坐标是大的坐标在后面，所以跟实际生活方向相反。所以canvas里的北方在下方，实际生活中北方在上方。 因为根据的是真实坐标，所以跟广州地铁提供的地图不一样。 左侧地图一种写法，右侧地图另一种写法。左侧可以下拉菜单选择线路查看路线，还可以查询站名属于哪个路线；右侧是全地图。</div>
 								求star呀~~~<br>
 								查看项目地址<a href="https://github.com/littleHiuman/GZsubway-canvas">点击这里</a><br>
 								查看效果<a href="./02-GZsubway-canvas/index.html">点击这里</a><br>
@@ -201,7 +201,7 @@
           {
             title: 'addressList通讯录',
             time: '2019-03-27',
-						content: `
+            content: `
 							效果图：<img style="display:block;width:300px;height:100%;" src="./graphs/1601.png"/>
 							使用该组件的前提<br>
 							样式中要有：<br>
@@ -280,33 +280,33 @@
 									}<br>
 									</code>
 								`
-					},
-					{
-						title: "css3实现菜单栏选中时的过渡效果",
-						time: "2016-10-14",
-						content: `<a href="./07-menus/index-2.html">index-2.html</a><br>
+          },
+          {
+            title: 'css3实现菜单栏选中时的过渡效果',
+            time: '2016-10-14',
+            content: `<a href="./07-menus/index-2.html">index-2.html</a><br>
 											点击后的效果过程图：
 											<img style="display:block;width:100%;height:100%;" src="./graphs/0702.png"/><br>
 											<img style="display:block;width:100%;height:100%;" src="./graphs/0703.png"/><br>
 											<img style="display:block;width:100%;height:100%;" src="./graphs/0704.png"/><br>
 											<img style="display:block;width:100%;height:100%;" src="./graphs/0705.png"/><br>`
-					},
-					{
-						title: "选项卡效果的菜单栏",
-						time: "2016-11-07",
-						content: `<a href="./17-tabMenu/tabOne.html">tabOne.html</a><br>
+          },
+          {
+            title: '选项卡效果的菜单栏',
+            time: '2016-11-07',
+            content: `<a href="./17-tabMenu/tabOne.html">tabOne.html</a><br>
 											<a href="./17-tabMenu/tab1.html">tab1.html</a><br>
 											区别：<br>
 											tabOne.html：多个html文件之间的跳转。（多个html文件）<br>
 											tab1.html：  显示隐藏某个元素。（一个html文件）<br>
 											样式效果是一样的：<br>
 											<img style="display:block;width:100%;height:100%;" src="./graphs/1702.png"/><br>`
-					},
-					{
-						title: "css3实现图片划过一束光闪过效果",
-						time: "2016-09-13",
-						content: `<a href="./cssEffect/flashLightPic.html">flashLightPic.html</a><br>`
-					}
+          },
+          {
+            title: 'css3实现图片划过一束光闪过效果',
+            time: '2016-09-13',
+            content: `<a href="./cssEffect/flashLightPic.html">flashLightPic.html</a><br>`
+          }
         ]
         // 排序
         blogs = blogs.sort((a, b) => {
