--- a/10-Loading/loading.html
+++ b/10-Loading/loading.html
@@ -1,76 +1,75 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>loading</title>
-  <style type="text/css">
-  .loading{
-    position: fixed;
-    top: 0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: 100;
-  }
+  <head>
+    <meta charset="utf-8" />
+    <title>loading</title>
+    <style type="text/css">
+      .loading{
+        position: fixed;
+        top: 0;
+        left:0;
+        width: 100%;
+        height: 100%;
+        background: #000;
+        z-index: 100;
+      }
 
-  .spinner {
-    position: fixed;
-    left: 50%;
-    top: 45%;
-    margin-top: -30px;
-    margin-left: -25px;
-    width: 50px;
-    height: 60px;
-    text-align: center;
-    font-size: 10px;
-  }
-  .spinner > div {
-    background-color: #75b900;
-    height: 100%;
-    width: 6px;
-    display: inline-block;
+      .spinner {
+        position: fixed;
+        left: 50%;
+        top: 45%;
+        margin-top: -30px;
+        margin-left: -25px;
+        width: 50px;
+        height: 60px;
+        text-align: center;
+        font-size: 10px;
+      }
+      .spinner > div {
+        background-color: #75b900;
+        height: 100%;
+        width: 6px;
+        display: inline-block;
 
-    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-    animation: stretchdelay 1.2s infinite ease-in-out;
-  }
-  .spinner .rect2 {
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
-  }
-  .spinner .rect3 {
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
-  }
-  .spinner .rect4 {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
-  }
-  .spinner .rect5 {
-    -webkit-animation-delay: -0.8s;
-    animation-delay: -0.8s;
-  }
+        -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+        animation: stretchdelay 1.2s infinite ease-in-out;
+      }
+      .spinner .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
+      }
+      .spinner .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+      }
+      .spinner .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
+      }
+      .spinner .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+      }
 
-  @keyframes stretchdelay {
-    0%, 40%, 100% {
-      transform: scaleY(0.4);
-      -webkit-transform: scaleY(0.4);
-    } 20% {
-      transform: scaleY(1.0);
-      -webkit-transform: scaleY(1.0);
-  }
-
-  </style>
-</head>
-<body>
-  <div class="loading">
-    <div class="spinner">
-      <div class="rect1"></div>
-      <div class="rect2"></div>
-      <div class="rect3"></div>
-      <div class="rect4"></div>
-      <div class="rect5"></div>
+      @keyframes stretchdelay {
+        0%, 40%, 100% {
+          transform: scaleY(0.4);
+          -webkit-transform: scaleY(0.4);
+        } 20% {
+          transform: scaleY(1.0);
+          -webkit-transform: scaleY(1.0);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="loading">
+      <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
