--- a/17-tabMenu/tabOne.html
+++ b/17-tabMenu/tabOne.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="./index3.css">
-</head>
-<body>
-  <div id="wrap">
-    <ul class="title">
-      <li class="active"><a href="tabOne.html">产品介绍</a><i></i></li>
-      <li><a href="tabTwo.html">产品功能</a><i></i></li>
-      <li><a href="tabThree.html">产品价格</a><i></i></li>
-      <li><a href="tabFour.html">更多服务</a><i></i></li>
-    </ul>
-    <div class="con">
-      内容内容内容内容内容内容1
+  <head>
+    <meta charset="UTF-8" />
+    <title>选项卡效果的菜单栏</title>
+    <link rel="stylesheet" href="./index3.css" />
+  </head>
+  <body>
+    <div id="wrap">
+      <ul class="title">
+        <li class="active"><a href="tabOne.html">产品介绍</a><i></i></li>
+        <li><a href="tabTwo.html">产品功能</a><i></i></li>
+        <li><a href="tabThree.html">产品价格</a><i></i></li>
+        <li><a href="tabFour.html">更多服务</a><i></i></li>
+      </ul>
+      <div class="con">
+        内容内容内容内容内容内容1
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
